GNOME Bugzilla – Bug 669986
Some keyboard navigation breakage with GtkNotebook
Last modified: 2012-10-04 07:02:45 UTC
Steps to reproduce: 1. Launch gtk3-demo 2. Run the 'Printing' demo 3. Select a printer so that the 'Print' button becomes available 4. Press Shift+Tab to move from the selected printer to the 'General' notebook tab 5. Press Shift+Tab to move from the 'General' notebook tab to the 'Print' button. Expected result: Focus would move to the 'Print' button. Actual result: Focus skips the action area completely and the 'Reverse' checkbox gains focus. 6. Press Tab from the 'Reverse' checkbox to give focus to the 'Print' button 7. Press Tab once more to give focus to the 'General' notebook tab 8. Press Shift+Tab to move from the 'General' notebook tab to the 'Print' button. This time it works as expected. It seems that giving focus to something on a notebook page prior to Shift+Tabbing is what causes the action area to be skipped over.
*** Bug 669753 has been marked as a duplicate of this bug. ***
Related: 1. In the printing demo, select a printer. 2. Press Shift+Tab to move focus to the 'General' notebook tab 3. Press Right to move to the 'Page Setup' notebook tab Focus moves to the printer name instead.
*** Bug 669752 has been marked as a duplicate of this bug. ***
*** Bug 681378 has been marked as a duplicate of this bug. ***
This bug not fixed already In GTK+ 3.5 with following commit? From 3056324570dc5f0e94a9da0958e4980199200ab6 Mon Sep 17 00:00:00 2001 From: Matthias Clasen <mclasen@redhat.com> Date: Sat, 23 Jun 2012 16:20:54 +0000 Subject: GtkNotebook: Fix reverse tab order When using Shift-Tab to move the focus out of page content onto the tab label, we end up in a situation where both Tab and Shift-Tab move focus back into the page, which is not really what is expected when the notebook is part of a dialog. Instead, arrange things so that using Shift-Tab with focus on a tab label moves the focus out of the notebook. http://bugzilla.gnome.org/show_bug.cgi?id=669986 In GTK+ 3.6 I not experienced this issue. Attila
Hey Attila. Thanks for catching that this bug was still open, verifying it was fixed in 3.6, and even pointing out the commit. You totally rock! I'm guessing Matthias just forgot to close it. Doing so now.
This bug fixed in GTK+ 3.5.6 version, the NEWS file says following: "Overview of Changes in GTK+ 3.5.6 ================================= ... Bugs fixed: 669986 Some keyboard navigation breakage with GtkNotebook" Attila